crates/test-files/fixtures/compile_errors/bad_enums.fe
pub enum MyEnum {
    Unit
    UnitTuple()
    Tuple(i32, u256)
}

contract Foo {
    pub fn bar(x: i32, y: u256) {
        let unit: MyEnum = MyEnum::Unit()
        let unit_tuple: MyEnum = MyEnum::UnitTuple
        let unit_tuple2: MyEnum = MyEnum::UnitTuple(x)
        let tuple: MyEnum = MyEnum::Tuple(y, x)
        let tuple2: MyEnum = MyEnum::Tuple(x)
    }
}
